// Copyright 2020 Adap GmbH. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// ==============================================================================

syntax = "proto3";

package flower.transport;

service BiStream {
  rpc Connect(stream ClientRequest) returns (stream ServerResponse) {}
}

message NDArray { bytes ndarray = 1; }

message ClientRequest {
  message Info { string uuid = 1; }
  message TrainResult { repeated NDArray weights = 1; }

  oneof report {
    Info info = 1;
    TrainResult train_result = 2;
  }
}

message ServerResponse {
  message TrainConfig { repeated NDArray weights = 1; }

  oneof instruction { TrainConfig train_config = 1; }
}
